// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`js /Users/yang/workspace/funsig/tests/fixtures/js/sample 1`] = `
[
  {
    "classes": [
      {
        "className": "Calculator",
        "lineNo": 1,
        "methods": [
          {
            "functionName": "constructor",
            "lineNo": 1,
            "parameters": [],
            "returnType": undefined,
          },
          {
            "functionName": "add",
            "lineNo": 1,
            "parameters": [
              {
                "name": "value",
                "optional": false,
                "type": "",
              },
            ],
            "returnType": undefined,
          },
          {
            "functionName": "clear",
            "lineNo": 1,
            "parameters": [],
            "returnType": undefined,
          },
        ],
        "signature": "",
      },
    ],
    "fileName": "sample.js",
    "functions": [
      {
        "functionName": "add",
        "lineNo": 1,
        "parameters": [
          {
            "name": "a",
            "optional": false,
            "type": "",
          },
          {
            "name": "b",
            "optional": false,
            "type": "",
          },
        ],
        "returnType": undefined,
      },
      {
        "functionName": "multiplyAndAdd",
        "lineNo": 1,
        "parameters": [
          {
            "name": "a",
            "optional": false,
            "type": "",
          },
          {
            "name": "b",
            "optional": false,
            "type": "",
          },
        ],
        "returnType": undefined,
      },
      {
        "functionName": "subtract",
        "lineNo": 1,
        "parameters": [
          {
            "name": "a",
            "optional": false,
            "type": "",
          },
          {
            "name": "b",
            "optional": false,
            "type": "",
          },
        ],
        "returnType": undefined,
      },
    ],
  },
]
`;

exports[`ts /Users/yang/workspace/funsig/tests/fixtures/ts/sample 1`] = `
[
  {
    "classes": [
      {
        "className": "UserManager",
        "lineNo": 1,
        "methods": [
          {
            "functionName": "public",
            "lineNo": 1,
            "parameters": [],
            "returnType": "",
          },
          {
            "functionName": "public",
            "lineNo": 1,
            "parameters": [],
            "returnType": "",
          },
          {
            "functionName": "public",
            "lineNo": 1,
            "parameters": [],
            "returnType": "",
          },
        ],
        "signature": "",
      },
    ],
    "fileName": "sample.ts",
    "functions": [
      {
        "functionName": "add",
        "lineNo": 1,
        "parameters": [],
        "returnType": "",
      },
      {
        "functionName": "processItems",
        "lineNo": 1,
        "parameters": [],
        "returnType": "",
      },
      {
        "functionName": "multiply",
        "lineNo": 1,
        "parameters": [],
        "returnType": undefined,
      },
      {
        "functionName": "constructor",
        "lineNo": 1,
        "parameters": [],
        "returnType": undefined,
      },
    ],
  },
]
`;
